--- a/products.html
+++ b/products.html
@@ -15,22 +15,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <script src="js/script.js"></script>
 
-<nav class="ps-5 navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand fw-bold" href="index.html">Wong Wholesale</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link active" href="products.html">Preorder</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
-      
-    </div>
-  </div>
+<nav class="navTop">
+  <a>Wong Wholesale</a>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="products.html" class="active ">Preorder</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
 </nav>
+
+<article class="preorder-cover">
+  <h1>Preorder Products</h1>
+  <p>Explore our exclusive range of products available for preorder.</p>
+</article>
 
 </body>
 </html>
