add more thing to do asgasgasg

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
     <a href="index.html">WongKokSeng Wholesale</a>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="products.html">Preorder</a></li>
+      <li><a href="product.html">Product</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a href="preorder.html">Preorder</a></li>
     </ul>
+    <a class="login" href="login.html">Login / Register</a>
+
   </nav>
 
 </body>
