--- a/preorder.html
+++ b/preorder.html
@@ -20,15 +20,13 @@
     <a href="index.html">WongKokSeng Wholesale</a>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="products.html" class="active ">Preorder</a></li>
+      <li><a href="product.html">Product</a></li>
       <li><a href="contact.html">Contact</a></li>
+      <li><a class="active" href="preorder.html">Preorder</a></li>
     </ul>
-  </nav>
+    <a class="login" href="login.html">Login / Register</a>
 
-  <article class="preorder-cover">
-    <h1>Preorder Products</h1>
-    <p>Explore our exclusive range of products available for preorder.</p>
-  </article>
+  </nav>
 
 </body>
 
