--- a/product.html
+++ b/product.html
@@ -20,13 +20,18 @@
     <a href="index.html">WongKokSeng Wholesale</a>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="product.html">Product</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
+      <li><a href="product.html" class="active ">Product</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="preorder.html">Preorder</a></li>
     </ul>
     <a class="login" href="login.html">Login / Register</a>
 
   </nav>
+
+  <article class="preorder-cover">
+    <h1>Preorder Products</h1>
+    <p>Explore our exclusive range of products available for preorder.</p>
+  </article>
 
 </body>
 
