--- a/product.html
+++ b/product.html
@@ -32,6 +32,19 @@
     <h1>Preorder Products</h1>
     <p>Explore our exclusive range of products available for preorder.</p>
   </article>
+  <br>
+
+  <div class="card-group" style="width: 18rem;">
+    <div class="card">
+      <img src="./images/bok-choy.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h4 class="card-title text-center">Bok-choy</h4>
+        <p class="card-text">faking bok-choy</p>
+        <p class="card-text text-center">Size: 300G Price: RM2.00</p>
+    <p class="card-text text-center">Size: 500G Price: RM3.00</p>
+  </div>
+</div>
+
 
 </body>
 
