--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="index.html">WongKokSeng Wholesale</a>
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="product.html">Product</a></li>
+      <li><a href="http://localhost/RAD-GroupProject/product.php">Product</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="preorder.html">Preorder</a></li>
     </ul>
