--- a/preorder.html
+++ b/preorder.html
@@ -20,7 +20,7 @@
     <a href="index.html">WongKokSeng Wholesale</a>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="product.html">Product</a></li>
+      <li><a href="product.php">Product</a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a class="active" href="preorder.html">Preorder</a></li>
     </ul>
